Fixed collapsed nav height

--- a/js/_nav.scss
+++ b/js/_nav.scss
@@ -15,7 +15,6 @@ nav {
   right: 0;
   z-index: 100;
   width: 100%;
-  height: 2em;
   background: rgba(253, 250, 250, 0.1);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   &.collapsed {
@@ -61,8 +60,7 @@ nav {
     }
     > li {
       float: left;
-      line-height: 2em;
-      padding: 0 $selectionPadding;
+      padding: $selectionPadding;
       display: inline;
     }
     ul {
